Backend: Add affects_payer_expectation and affects_receiver_expectation boolean flags in db/backend/api Frontend:  - Added "Add rule" page and set affects_receiver_expectation accordingly  - Modified existing pages to have a new mode that also affects expectation  - Reviwed payments vs. transactions translation strings

--- a/frontend/src/lib/i18n/translations/en.json
+++ b/frontend/src/lib/i18n/translations/en.json
@@ -160,7 +160,7 @@
   "overview.directOnlyMode": "Direct-only (no intermediaries)",
   "overview.noSettlementsForParticipant": "No settlements for this participant",
   "overview.allSettled": "All settled up!",
-  "overview.paymentsIncluded": "Payments Included",
+  "overview.transactionsIncluded": "Transactions Included",
   "overview.transaction": "transaction",
   "overview.transactions": "transactions",
   "overview.paidBy": "Paid by",
@@ -184,8 +184,8 @@
   "overview.amountContributed": "{payer} contributed {amount}",
   "overview.amountConsumed": "{consumer} comsumed {amount}",
   "overview.goToDate": "Go to {date}",
-  "overview.noPreviousPayment": "No previous payment",
-  "overview.noNextPayment": "No next payment",
+  "overview.noPreviousPayment": "No previous transaction",
+  "overview.noNextPayment": "No next transaction",
   "overview.includeDrafts": "Include drafts",
   "overview.currentTotal": "Current Total",
   "overview.projectedTotal": "Projected Total",
@@ -214,7 +214,7 @@
   "cashflow.currentTrend": "Current Trend (Monthly)",
   "cashflow.recommended": "Recommended",
   "cashflow.recommendationNote": "These recommendations show how much each participant should contribute at the selected frequency to stay balanced over the time horizon.",
-  "cashflow.paymentFrequency": "Payment Frequency",
+  "cashflow.transactionFrequency": "Transaction Frequency",
   "cashflow.every": "Every",
   "cashflow.weeks": "week(s)",
   "cashflow.months": "month(s)",
@@ -222,16 +222,16 @@
   "cashflow.poolEvolution": "Pool Account Evolution",
   "cashflow.evolution": "Evolution",
   "cashflow.noRecommendations": "No recommendations available yet",
-  "cashflow.bankUpdateWarning": "⚠️ REMINDER: Don't forget to update your recurring bank transfer to match this payment!\n\nAfter creating this recurring payment in BonsCompte, please also update (or create) the corresponding automatic payment in your bank account.\n\nClick OK to continue creating the payment.",
-  "cashflow.consolidateMode": "Consolidate existing recurring payments",
-  "cashflow.consolidateModeHelp": "When enabled, existing recurring pool contributions will be excluded from the calculation and replaced with a single optimized payment when you click 'Create Payment'.",
-  "cashflow.paymentsToDelete": "Payments That Will Be Deleted",
-  "cashflow.consolidateExplanation": "When you click 'Create Payment', the following existing recurring payments will be deleted and replaced with a single optimized payment:",
-  "cashflow.consolidateAction": "A new consolidated payment will be created with the recommended amount and frequency.",
-  "cashflow.consolidateWarning": "⚠️ CONSOLIDATE MODE WARNING\n\nYou are about to DELETE {count} existing recurring payment(s) and replace them with a single consolidated payment:\n\nPayments to be deleted:\n{paymentsList}\n\nNew payment:\n{newAmount} every {frequency}\n\nThis action cannot be undone. Are you sure you want to proceed?",
+  "cashflow.bankUpdateWarning": "⚠️ REMINDER: Don't forget to update your recurring bank transfer to match this transaction!\n\nAfter creating this recurring transaction in BonsCompte, please also update (or create) the corresponding automatic transaction in your bank account.\n\nClick OK to continue creating the transaction.",
+  "cashflow.consolidateMode": "Consolidate existing recurring transactions",
+  "cashflow.consolidateModeHelp": "When enabled, existing recurring pool contributions will be excluded from the calculation and replaced with a single optimized transaction when you click 'Create Payment'.",
+  "cashflow.transactionsToDelete": "Payments That Will Be Deleted",
+  "cashflow.consolidateExplanation": "When you click 'Create Payment', the following existing recurring transactions will be deleted and replaced with a single optimized transaction:",
+  "cashflow.consolidateAction": "A new consolidated transaction will be created with the recommended amount and frequency.",
+  "cashflow.consolidateWarning": "⚠️ CONSOLIDATE MODE WARNING\n\nYou are about to DELETE {count} existing recurring transaction(s) and replace them with a single consolidated transaction:\n\nPayments to be deleted:\n{transactionsList}\n\nNew transaction:\n{newAmount} every {frequency}\n\nThis action cannot be undone. Are you sure you want to proceed?",
   "cashflow.consolidatedPaymentDescription": "Consolidated recurring contribution (recommended)",
-  "cashflow.consolidateSuccess": "Successfully consolidated {count} payment(s) into one!",
-  "cashflow.consolidateError": "Failed to consolidate payments. Please try again.",
+  "cashflow.consolidateSuccess": "Successfully consolidated {count} transaction(s) into one!",
+  "cashflow.consolidateError": "Failed to consolidate transactions. Please try again.",
   "cashflow.configureRecommendation": "Configure Recurring Contribution",
   "cashflow.payer": "Payer",
   "cashflow.receiver": "Target Account",
@@ -251,97 +251,129 @@
   "cashflow.date": "Date",
   "cashflow.recommendationHorizon": "Recommendation Horizon",
 
-  "payments.title": "Payments",
-  "payments.addPayment": "Add Payment",
-  "payments.editPayment": "Edit Payment",
-  "payments.updatePayment": "Update Payment",
-  "payments.addParticipantsFirst": "Add participants before creating payments.",
-  "payments.paidBy": "Paid by",
-  "payments.amount": "Amount",
-  "payments.date": "Date",
-  "payments.description": "Description",
-  "payments.descriptionPlaceholder": "What was this for?",
-  "payments.receiptImage": "Receipt Image",
-  "payments.imageFormatsHint": "(JPEG, PNG, GIF, WebP - max 5MB)",
-  "payments.receiptPreview": "Receipt preview",
-  "payments.internalTransferTo": "Internal Transfer to",
-  "payments.splitBetween": "Split between",
-  "payments.includeAll": "Include all",
-  "payments.participant": "Participant",
-  "payments.include": "Include",
-  "payments.weight": "Weight",
-  "payments.share": "Share",
-  "payments.depositToPool": "Deposit to pool account",
-  "payments.transferToThisPerson": "Transfer money to this person",
-  "payments.deposit": "Deposit",
-  "payments.payBack": "Pay back",
-  "payments.recurringPayment": "Recurring payment",
-  "payments.every": "Every",
-  "payments.period": "Period",
-  "payments.day": "Day",
-  "payments.days": "Days",
-  "payments.week": "Week",
-  "payments.weeks": "Weeks",
-  "payments.month": "Month",
-  "payments.months": "Months",
-  "payments.year": "Year",
-  "payments.years": "Years",
-  "payments.recurrence.daily": "daily",
-  "payments.recurrence.weekly": "weekly",
-  "payments.recurrence.monthly": "monthly",
-  "payments.recurrence.yearly": "yearly",
-  "payments.recurrence.every": "every",
-  "payments.recurrence.everyNDays": "every {n} days",
-  "payments.recurrence.everyNWeeks": "every {n} weeks",
-  "payments.recurrence.everyNMonths": "every {n} months",
-  "payments.recurrence.everyNYears": "every {n} years",
-  "payments.selectDaysOfWeek": "Select days of the week:",
-  "payments.selectDaysOfMonth": "Select days of the month:",
-  "payments.monthdayWarning": "Note: For months with fewer days, the last day of the month will be used.",
-  "payments.selectMonths": "Select months:",
-  "payments.endDateOptional": "End date (optional)",
-  "payments.occurrencesOptional": "Number of occurrences (optional)",
-  "payments.occurrencesPlaceholder": "e.g., 12",
-  "payments.lastOccurrence": "Last occurrence",
-  "payments.splitAndUpdate": "Split & Update",
-  "payments.recentPayments": "Recent Payments",
-  "payments.noPaymentsYet": "No payments yet.",
-  "payments.viewReceipt": "View receipt",
-  "payments.deletePayment": "Delete payment",
-  "payments.transfer": "Transfer",
-  "payments.filters": "Filters",
-  "payments.searchDescription": "Search description",
-  "payments.searchPlaceholder": "Search payments...",
-  "payments.filterByPayer": "Paid by",
-  "payments.filterByContributor": "Contributor",
-  "payments.filterByType": "Payment type",
-  "payments.allPayers": "All payers",
-  "payments.allContributors": "All contributors",
-  "payments.allTypes": "All types",
-  "payments.typeExpense": "External expense",
-  "payments.typeTransfer": "Internal transfer",
-  "payments.typeInflow": "External funds",
-  "payments.filterByRecurring": "Recurrence",
-  "payments.allRecurrence": "All",
-  "payments.recurringOnly": "Recurring only",
-  "payments.oneTimeOnly": "One-time only",
-  "payments.externalInflow": "External funds",
-  "payments.inflowReceiver": "Received by",
-  "payments.externalInflowTo": "External funds to",
-  "payments.externalIndicator": "External",
-  "payments.dateFrom": "From date",
-  "payments.dateTo": "To date",
-  "payments.showingFiltered": "Showing filtered payments:",
-  "payments.noMatchingPayments": "No payments match your filters",
-  "payments.loadMore": "Load more payments",
-  "payments.dateRangeFromTo": "from {startDate} to {endDate}",
-  "payments.startingFrom": "from {date}",
-  "payments.occurringOn": "on {date}",
-  "payments.status": "Status",
-  "payments.statusFinal": "Final",
-  "payments.statusDraft": "Draft",
-  "payments.filterByStatus": "Status",
-  "payments.allStatuses": "All statuses",
+  "transactions.title": "Transaction List",
+  "transactions.addPayment": "Add Payment",
+  "transactions.editPayment": "Edit Payment",
+  "transactions.updatePayment": "Update Payment",
+  "transactions.addParticipantsFirst": "Add participants before creating payments.",
+  "transactions.paidBy": "Paid by",
+  "transactions.appliesTo": "Applies to",
+  "transactions.amount": "Amount",
+  "transactions.date": "Date",
+  "transactions.description": "Description",
+  "transactions.descriptionPlaceholder": "What was this for?",
+  "transactions.receiptImage": "Receipt Image",
+  "transactions.imageFormatsHint": "(JPEG, PNG, GIF, WebP - max 5MB)",
+  "transactions.receiptPreview": "Receipt preview",
+  "transactions.internalTransferTo": "Internal Transfer to",
+  "transactions.splitBetween": "Split between",
+  "transactions.includeAll": "Include all",
+  "transactions.participant": "Participant",
+  "transactions.include": "Include",
+  "transactions.weight": "Weight",
+  "transactions.share": "Share",
+  "transactions.depositToPool": "Deposit to pool account",
+  "transactions.transferToThisPerson": "Transfer money to this person",
+  "transactions.deposit": "Deposit",
+  "transactions.payBack": "Pay back",
+  "transactions.recurringTransaction": "Recurring transaction",
+  "transactions.every": "Every",
+  "transactions.period": "Period",
+  "transactions.day": "Day",
+  "transactions.days": "Days",
+  "transactions.week": "Week",
+  "transactions.weeks": "Weeks",
+  "transactions.month": "Month",
+  "transactions.months": "Months",
+  "transactions.year": "Year",
+  "transactions.years": "Years",
+  "transactions.recurrence.daily": "daily",
+  "transactions.recurrence.weekly": "weekly",
+  "transactions.recurrence.monthly": "monthly",
+  "transactions.recurrence.yearly": "yearly",
+  "transactions.recurrence.every": "every",
+  "transactions.recurrence.everyNDays": "every {n} days",
+  "transactions.recurrence.everyNWeeks": "every {n} weeks",
+  "transactions.recurrence.everyNMonths": "every {n} months",
+  "transactions.recurrence.everyNYears": "every {n} years",
+  "transactions.selectDaysOfWeek": "Select days of the week:",
+  "transactions.selectDaysOfMonth": "Select days of the month:",
+  "transactions.monthdayWarning": "Note: For months with fewer days, the last day of the month will be used.",
+  "transactions.selectMonths": "Select months:",
+  "transactions.endDateOptional": "End date (optional)",
+  "transactions.occurrencesOptional": "Number of occurrences (optional)",
+  "transactions.occurrencesPlaceholder": "e.g., 12",
+  "transactions.lastOccurrence": "Last occurrence",
+  "transactions.splitAndUpdate": "Split & Update",
+  "transactions.recentTransactions": "Recent Transactions",
+  "transactions.noTransactionsYet": "No transactions yet.",
+  "transactions.viewReceipt": "View receipt",
+  "transactions.deleteTransaction": "Delete transaction",
+  "transactions.transfer": "Transfer",
+  "transactions.filters": "Filters",
+  "transactions.searchDescription": "Search description",
+  "transactions.searchPlaceholder": "Search transactions...",
+  "transactions.filterByPayer": "Paid by",
+  "transactions.filterByContributor": "Contributor",
+  "transactions.filterByType": "Payment type",
+  "transactions.allPayers": "All payers",
+  "transactions.allContributors": "All contributors",
+  "transactions.allTypes": "All types",
+  "transactions.typeExpense": "External expense",
+  "transactions.typeTransfer": "Internal transfer",
+  "transactions.typeInflow": "External funds",
+  "transactions.filterByRecurring": "Recurrence",
+  "transactions.allRecurrence": "All",
+  "transactions.recurringOnly": "Recurring only",
+  "transactions.oneTimeOnly": "One-time only",
+  "transactions.externalInflow": "External funds",
+  "transactions.inflowReceiver": "Received by",
+  "transactions.externalInflowTo": "External funds to",
+  "transactions.externalIndicator": "External",
+  "transactions.dateFrom": "From date",
+  "transactions.dateTo": "To date",
+  "transactions.showingFiltered": "Showing filtered transactions:",
+  "transactions.noMatchingPayments": "No transactions match your filters",
+  "transactions.loadMore": "Load more transactions",
+  "transactions.dateRangeFromTo": "from {startDate} to {endDate}",
+  "transactions.startingFrom": "from {date}",
+  "transactions.occurringOn": "on {date}",
+  "transactions.status": "Status",
+  "transactions.statusFinal": "Final",
+  "transactions.statusDraft": "Draft",
+  "transactions.filterByStatus": "Status",
+  "transactions.allStatuses": "All statuses",
+  "transactions.outgoing": "Add payment",
+  "transactions.incoming": "Add received funds",
+  "transactions.internal": "Add transfered funds",
+  "transactions.addDeposit": "Add Deposit",
+  "transactions.editDeposit": "Edit Deposit",
+  "transactions.addReceived": "Add Received",
+  "transactions.editReceived": "Edit Received",
+  "transactions.addTransfer": "Add Transfer",
+  "transactions.editTransfer": "Edit Transfer",
+  "transactions.receivedInto": "Into",
+  "transactions.receivedBy": "By",
+  "transactions.from": "From",
+  "transactions.to": "To",
+  "transactions.addIncoming": "Add Incoming",
+  "transactions.editIncoming": "Edit Incoming",
+  "transactions.invalidMode": "Invalid transaction mode",
+  "transactions.receiverRequired": "Please select a receiver",
+  "transactions.addRule": "Add Rule",
+  "transactions.editRule": "Edit Rule",
+  "transactions.rule": "Add new rule",
+  "transactions.withdrawalType": "Withdrawal Type",
+  "transactions.standard": "Standard",
+  "transactions.approved": "Approved",
+  "transactions.standardWithdrawalHint": "Standard withdrawal - may trigger warning if below expected minimum",
+  "transactions.approvedHint": "Approved withdrawal - reduces expected minimum (no warning)",
+  "transactions.depositType": "Deposit Type",
+  "transactions.free": "Free",
+  "transactions.earmarked": "Earmarked",
+  "transactions.freeHint": "Free deposit - available for any use",
+  "transactions.earmarkedHint": "Earmarked deposit - increases expected minimum (protected)",
+  "transactions.noEditPermission": "You don't have permission to edit transactions.",
 
   "participants.title": "Participants",
   "participants.description": "Natural or legal persons participating in the project, with or without an associated member user",
@@ -411,7 +443,7 @@
   "history.actions.DELETE": "Deleted",
   "history.actions.UNDO": "Undone",
   "history.entities.all": "All Types",
-  "history.entities.payment": "Payments",
+  "history.entities.transaction": "Payments",
   "history.entities.participant": "Participants",
   "history.entities.project_member": "Members",
   "history.entities.project": "Project",
@@ -437,7 +469,7 @@
   "projectSettings.approve": "Approve",
   "projectSettings.reject": "Reject",
   "projectSettings.dangerZone": "Danger Zone",
-  "projectSettings.deleteWarning": "Deleting the project will permanently remove all payments, participants, and members.",
+  "projectSettings.deleteWarning": "Deleting the project will permanently remove all transactions, participants, and members.",
   "projectSettings.deleteProject": "Delete Project",
   "projectSettings.typeNameToConfirm": "Type the project name to confirm deletion",
   "projectSettings.projectNamePlaceholder": "Project name",
@@ -513,25 +545,7 @@
   "months.nov": "Nov",
   "months.dec": "Dec",
 
-  "transactions.outgoing": "Add payment",
-  "transactions.incoming": "Add received funds",
-  "transactions.internal": "Add transfered funds",
-  "transactions.addPayment": "Add Payment",
-  "transactions.editPayment": "Edit Payment",
-  "transactions.addDeposit": "Add Deposit",
-  "transactions.editDeposit": "Edit Deposit",
-  "transactions.addReceived": "Add Received",
-  "transactions.editReceived": "Edit Received",
-  "transactions.addTransfer": "Add Transfer",
-  "transactions.editTransfer": "Edit Transfer",
-  "transactions.paidBy": "Paid by",
-  "transactions.receivedInto": "Into",
-  "transactions.receivedBy": "By",
-  "transactions.from": "From",
-  "transactions.to": "To",
-  "transactions.addIncoming": "Add Incoming",
-  "transactions.editIncoming": "Edit Incoming",
-  "transactions.invalidMode": "Invalid transaction mode",
-  "transactions.receiverRequired": "Please select a receiver",
-  "payments.noEditPermission": "You don't have permission to edit payments."
+  "overview.expectedMinimum": "Expected minimum",
+  "overview.shortfall": "Shortfall",
+  "overview.belowExpected": "Below expected minimum"
 }
