--- a/frontend/src/lib/i18n/translations/fr.json
+++ b/frontend/src/lib/i18n/translations/fr.json
@@ -191,10 +191,12 @@
   "overview.projectedTotal": "Total projeté",
   "overview.minimumTotal": "Minimum",
   "overview.poolNegativeWarning": "Le solde du pot commun devient négatif sur cette période !",
-  "overview.poolWillGoNegative": "{pool} deviendra négatif le {date} si vous n'ajoutez pas de fonds",
-  "overview.poolIsNegative": "{pool} est négatif, ajoutez des fonds",
-  "overview.userWillGoNegative": "La part de {user} dans {pool} deviendra négative le {date}",
-  "overview.userIsNegative": "La part de {user} dans {pool} est négative",
+  "overview.poolWillGoBelow": "{pool} passera sous le minimum attendu le {date}",
+  "overview.poolIsBelow": "{pool} est sous le minimum attendu",
+  "overview.expectedMinWillGoNegative": "Le minimum attendu de {pool} deviendra négatif le {date} (vérifier les règles)",
+  "overview.expectedMinIsNegative": "Le minimum attendu de {pool} est négatif (vérifier les règles)",
+  "overview.userWillGoBelowExpected": "La part de {user} dans {pool} passera sous le minimum attendu le {date}",
+  "overview.userIsBelowExpected": "La part de {user} dans {pool} est sous le minimum attendu",
   "overview.warningPeriod": "Période d'alerte",
 
   "cashflow.title": "Planification de trésorerie",
@@ -254,7 +256,7 @@
   "transactions.title": "Liste des transactions",
   "transactions.addPayment": "Ajouter le paiement",
   "transactions.editPayment": "Modifier le paiement",
-  "transactions.updatePayment": "Mettre à jour le paiement",
+  "transactions.updateTransaction": "Mettre à jour",
   "transactions.addParticipantsFirst": "Ajoutez des participants avant de créer des paiements.",
   "transactions.paidBy": "Payé par",
   "transactions.appliesTo": "S'applique au compte",
@@ -305,7 +307,7 @@
   "transactions.occurrencesPlaceholder": "ex. 12",
   "transactions.lastOccurrence": "Dernière occurrence",
   "transactions.splitAndUpdate": "Répartir et mettre à jour",
-  "transactions.recentTransactions": "Paiements récents",
+  "transactions.recentTransactions": "Transactions récentes",
   "transactions.noTransactionsYet": "Aucune transaction pour le moment.",
   "transactions.viewReceipt": "Voir le reçu",
   "transactions.deleteTransaction": "Supprimer la transaction",
@@ -322,6 +324,7 @@
   "transactions.typeExpense": "Dépense externe",
   "transactions.typeTransfer": "Transfert interne",
   "transactions.typeInflow": "Fonds externes",
+  "transactions.typeRule": "Règle",
   "transactions.filterByRecurring": "Récurrence",
   "transactions.allRecurrence": "Toutes",
   "transactions.recurringOnly": "Récurrents uniquement",
@@ -546,6 +549,9 @@
   "months.dec": "Déc",
 
   "overview.expectedMinimum": "Minimum attendu",
+  "overview.currentExpectedMin": "Min. attendu actuel",
+  "overview.projectedExpectedMin": "Min. attendu projeté",
+  "overview.minimumExpectedMin": "Min. min. attendu",
   "overview.shortfall": "Manque à gagner",
   "overview.belowExpected": "En dessous du minimum attendu"
 }
