--- a/frontend/src/lib/i18n/translations/fr.json
+++ b/frontend/src/lib/i18n/translations/fr.json
@@ -160,7 +160,7 @@
   "overview.directOnlyMode": "Sans intermédiaires",
   "overview.noSettlementsForParticipant": "Aucun règlement pour ce participant",
   "overview.allSettled": "Tout est réglé !",
-  "overview.paymentsIncluded": "Paiements inclus",
+  "overview.transactionsIncluded": "Transactions incluses",
   "overview.transaction": "transaction",
   "overview.transactions": "transactions",
   "overview.paidBy": "Payé par",
@@ -187,9 +187,9 @@
   "overview.noPreviousTransaction": "Aucune transaction précédente",
   "overview.noNextTransaction": "Aucune transaction suivante",
   "overview.includeDrafts": "Inclure les brouillons",
-  "overview.currentTotal": "Total actuel",
-  "overview.projectedTotal": "Total projeté",
-  "overview.minimumTotal": "Minimum",
+  "overview.balanceStart": "Solde au début",
+  "overview.balanceEnd": "Solde à la fin",
+  "overview.balanceLowest": "Solde minimum",
   "overview.poolNegativeWarning": "Le solde du pot commun devient négatif sur cette période !",
   "overview.poolWillGoBelow": "{pool} passera sous le minimum attendu le {date}",
   "overview.poolIsBelow": "{pool} est sous le minimum attendu",
@@ -198,6 +198,12 @@
   "overview.userWillGoBelowExpected": "La part de {user} dans {pool} passera sous le minimum attendu le {date}",
   "overview.userIsBelowExpected": "La part de {user} dans {pool} est sous le minimum attendu",
   "overview.warningPeriod": "Période d'alerte",
+  "overview.expectedMinimum": "Minimum attendu",
+  "overview.expectedStart": "Minimum attendu au début",
+  "overview.expectedEnd": "Minimum attendu à la fin",
+  "overview.expectedHighest": "Minimum attendu le plus élevé",
+  "overview.shortfall": "Manque à gagner",
+  "overview.belowExpected": "En dessous du minimum attendu",
 
   "cashflow.title": "Planification de trésorerie",
   "cashflow.failedToLoad": "Échec du chargement de la projection de trésorerie",
@@ -344,6 +350,8 @@
   "transactions.status": "Statut",
   "transactions.statusFinal": "Final",
   "transactions.statusDraft": "Brouillon",
+  "transactions.statusApproved": "Approuvé",
+  "transactions.statusEarmarked": "Réservé",
   "transactions.filterByStatus": "Statut",
   "transactions.allStatuses": "Tous les statuts",
   "transactions.outgoing": "Ajouter un paiement",
@@ -546,12 +554,5 @@
   "months.sep": "Sep",
   "months.oct": "Oct",
   "months.nov": "Nov",
-  "months.dec": "Déc",
-
-  "overview.expectedMinimum": "Minimum attendu",
-  "overview.currentExpectedMin": "Min. attendu actuel",
-  "overview.projectedExpectedMin": "Min. attendu projeté",
-  "overview.minimumExpectedMin": "Min. min. attendu",
-  "overview.shortfall": "Manque à gagner",
-  "overview.belowExpected": "En dessous du minimum attendu"
+  "months.dec": "Déc"
 }
